# when

./: .gitignore  AUDIO_PLAN.md  AUDIO_UPGRADE.md  BAND.md  BAND_PLAN.md  CMakeLists.txt  DESIGN.md  LIGHT_BRUSH_PLAN.md  PLAN.md  README.md  SPACE_ROCK_PLAN.md  UPGRADE.md  when.toml
assets/: proper.txt
assets/sprites/bassist/: fast.txt  frame_03.txt  frame_04.txt  frame_05.txt  idle.txt  normal.txt  spotlight.txt
assets/sprites/drummer/: fast.txt  frame_03.txt  frame_04.txt  frame_05.txt  frame_08.txt  idle.txt  normal.txt  spotlight.txt
assets/sprites/guitarist/: fast.txt  frame_03.txt  frame_04.txt  frame_05.txt  idle.txt  normal.txt  spotlight.txt
assets/sprites/vocal/: fast.txt  frame_03.txt  frame_04.txt  frame_05.txt  frame_06.txt  idle.txt  normal.txt  spotlight.txt
docs/: AUDIO_DESIGN.md  AUDIO_PLAN.md  BAND_MIGRATION_STATUS.md  DEV_GUIDE.md  SPACE_ROCK_PLAN.md  UNKNOWN_PLEASURE.md
docs/archive/: BAND_PLAN.md
extra/: feature_extractor_sanity.cpp  sprite_player_harness.cpp
src/: ConfigLoader.cpp  ConfigLoader.h  audio_engine.cpp  audio_engine.h  config.cpp  config.h  dsp.cpp  dsp.h  main.cpp  pleasure.cpp  pleasure.h  plugins.cpp  plugins.h  renderer.cpp  renderer.h  visualizer.h
src/animations/: animation.h  animation_event_utils.h  animation_manager.cpp  animation_manager.h  ascii_matrix_animation.cpp  ascii_matrix_animation.h  bar_visual_animation.cpp  bar_visual_animation.h  breathe_animation.cpp  breathe_animation.h  cyber_rain_animation.cpp  cyber_rain_animation.h  glyph_utils.cpp  glyph_utils.h  light_brush_animation.cpp  light_brush_animation.h  light_cycle_animation.cpp  light_cycle_animation.h  lightning_wave_animation.cpp  lightning_wave_animation.h  logging_animation.cpp  logging_animation.h  pleasure_animation.cpp  pleasure_animation.h  random_text_animation.cpp  random_text_animation.h  space_rock_animation.cpp  space_rock_animation.h
src/animations/band/: feature_taps.cpp  feature_taps.h  instrument.cpp  instrument.h  panel_controller.cpp  panel_controller.h  sprite_types.cpp  sprite_types.h
src/audio/: audio_features.h  feature_extractor.cpp  feature_extractor.h  feature_input_frame.h
src/config/: animation_config_parser.cpp  animation_config_parser.h  raw_config.cpp  raw_config.h  value_parsers.cpp  value_parsers.h
src/events/: event_bus.h  frame_events.h
tests/: audio_engine_stream_test.cpp  band_feature_taps_test.cpp  band_instrument_state_machine_test.cpp  band_sprite_assets_test.cpp  band_sprite_loader_test.cpp  feature_extractor_weighting_test.cpp
